name:                rogue
version:             0.1.0.0
synopsis:            Roguelike using Apecs and my experimental Vulkan engine
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              cjay
maintainer:          680672+cjay@users.noreply.github.com
copyright:           2020 Johannes Krause
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable rogue
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Game, ApecsExts, ViewModel, Dungeon, Behave, Graphics, Configuration
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       apecs
                     , astar
                     , base
                     , easytensor
                     , easytensor-vulkan
                     , linear
                     , lens
                     , GLFW-b >= 3.3.0.0
                     , grid
                     , MonadRandom
                     , mtl
                     , safe
                     , vector
                     , vulkan-api
                     , vulkan-engine
  default-language:    Haskell2010
  default-extensions:  BlockArguments
                     , DataKinds
                     , LambdaCase
                     , NamedFieldPuns
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TypeApplications
