cabal-version:       2.2
name:                rogue
version:             0.1.0.0
synopsis:            Roguelike using Apecs and my experimental Vulkan engine
description:         The beginnings of a roguelike using https://github.com/cjay/vulkyrie
homepage:            https://github.com/cjay/some-roguelike
license:             BSD-3-Clause
license-file:        LICENSE
author:              cjay
maintainer:          cjay@brainuse.de
copyright:           Copyright (C) 2020-2021 Johannes Krause
category:            Games
build-type:          Simple
tested-with:         GHC == 8.10.4

executable rogue
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Game, ApecsExts, ViewModel, Dungeon, Behave, Graphics, Configuration
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       apecs
                     , astar
                     , base
                     , easytensor
                     , easytensor-vulkan
                     , linear
                     , lens
                     , GLFW-b
                     , grid
                     , MonadRandom
                     , mtl
                     , safe
                     , unliftio
                     , vector
                     , vulkan-api
                     , vulkyrie
  default-language:    Haskell2010
  default-extensions:  BlockArguments
                     , DataKinds
                     , LambdaCase
                     , NamedFieldPuns
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TypeApplications
source-repository head
    type:     git
    location: https://github.com/cjay/some-roguelike.git